//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/timestamp.proto";

// Metadata common to all kinds of objects.
message Metadata {
  // Time of creation of the object.
  google.protobuf.Timestamp creation_timestamp = 1;

  // Time of deletion of the object.
  google.protobuf.Timestamp deletion_timestamp = 2;

  // Finalizers indicate tasks that need to be completed before the object can be completely deleted. When the object
  // has been deleted and this list is empty the system will automatically archive the object.
  repeated string finalizers = 3;

  // Onwers contains the identifiers of the owners of the object.
  repeated string owners = 4;
}
